--- a/src/main/resources/templates/Start.html
+++ b/src/main/resources/templates/Start.html
@@ -7,19 +7,27 @@
 
           integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
 </head>
-<body>
+<body class="container overflow-hidden text-center">
+<form action="/" method="post"th:object="">
+
+
+<div th:each="question : ${questionList}"th:text="${question.question}">
+
 <div class="form-check">
-    <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
+    <input class="form-check-input" type="radio" th:field="${question.answer}"name="flexRadioDefault" id="flexRadioDefault1">
     <label class="form-check-label" for="flexRadioDefault1">
-        Default radio
+        Ja
     </label>
 </div>
 <div class="form-check">
     <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2" checked>
     <label class="form-check-label" for="flexRadioDefault2">
-        Default checked radio
+        Nej
     </label>
 </div>
+</div>
+<input class="btn btn-primary" type="submit" value="Submit">
+</form>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
 
         integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
