--- a/src/main/resources/templates/start.html
+++ b/src/main/resources/templates/start.html
@@ -8,7 +8,10 @@
           integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
 </head>
 <body class="container overflow-hidden text-center">
-
+<!--<div class="card text-bg-primary mb-3" style="max-width: 18rem;">    <div class="card-body">
+    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>  </div></div>
+-->
+<div class="card text-bg-primary mb-3" style="max-width: 18rem;"> <div class="card-header">Fråga nr ?</div>
 <table>
     <tr th:text="${session.question.question}">
         QUESTION
@@ -16,8 +19,12 @@
     <form th:action="'/' +${currentQuestion}" method="post">
         <tr>
             <td>
-                <input type="radio" name="action" th:value="true"/><label>Ja</label><br>
-                <input type="radio" name="action" th:value="false"/><label>Nej</label><br>
+                <label class="radio-inline">
+                    <input type="radio" name="action" th:value="true"/><label>Ja</label><br>
+                </label>
+                <label class="radio-inline">
+                    <input type="radio" name="action" th:value="false"/><label>Nej</label><br>
+                </label>
                 <p>
                     <input type="submit" value="Nästa">
                 </p>
@@ -25,12 +32,9 @@
         </tr>
     </form>
 </table>
-
+</div>
 <!--<form action="/" method="post"th:object="">
-
-
 <div th:each="question : ${questionList}"th:text="${question.question}">
-
 <div class="form-check">
     <input class="form-check-input" type="radio" th:field="${question.answer}"name="flexRadioDefault" id="flexRadioDefault1">
     <label class="form-check-label" for="flexRadioDefault1">
@@ -47,10 +51,8 @@
 <input class="btn btn-primary" type="submit" value="Submit">
 </form>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
-
         integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
-
-        crossorigin="anonymous"></script>
+        crosorigin="anonymous"></script>
 -->
 </body>
 </html>
