--- a/src/main/resources/templates/Start.html
+++ b/src/main/resources/templates/Start.html
@@ -21,11 +21,16 @@
                 <label class="radio-inline"><input type="radio" name="action" th:value="false"/><label> Nej </label><br></label>
                 <p>
                 <div class="d-grid gap-2 col-6 mx-auto"><input type="submit" class="tempBtn2 btn btn-primary mb-2 m-1" value="Nästa"></div>
+                <br>
                 </p>
             </form>
+
         </table>
+        <div th:text="${errorMessage}"></div>
     </h5>
-</div><!--<form action="/" method="post"th:object=""><div th:each="question : ${questionList}"th:text="${question.question}"><div class="form-check">    <input class="form-check-input" type="radio" th:field="${question.answer}"name="flexRadioDefault" id="flexRadioDefault1">    <label class="form-check-label" for="flexRadioDefault1">        Ja
+
+</div>
+<!--<form action="/" method="post"th:object=""><div th:each="question : ${questionList}"th:text="${question.question}"><div class="form-check">    <input class="form-check-input" type="radio" th:field="${question.answer}"name="flexRadioDefault" id="flexRadioDefault1">    <label class="form-check-label" for="flexRadioDefault1">        Ja
     </label></div><div class="form-check">    <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2" checked>    <label class="form-check-label" for="flexRadioDefault2">        Nej
     </label></div></div><input class="btn btn-primary" type="submit" value="Submit"></form><script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"        integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"        crossorigin="anonymous"></script>-->
 </body>
