--- a/src/main/resources/templates/Start.html
+++ b/src/main/resources/templates/Start.html
@@ -7,7 +7,7 @@
           integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
     <link rel="stylesheet" href="/CSS/style.css">
 </head>
-<body class="container overflow-hidden text-center">
+<body class="container overflow-auto text-center">
 <!--<div class="card text-bg-primary mb-3" style="max-width: 18rem;">    <div class="card-body">    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>  </div></div>-->
 <div class="header"><img src="/img/logo01.png" class="img-fluid" alt="Responsive image"></div>
 <div class>
@@ -16,10 +16,12 @@
     <div class="card-header" th:text="'Fråga ' + ${currentQuestion} + ' av ' + ${questionSize}"></div>
         <table><br>
             <tr th:text="${session.question.question}"></tr>
-            <form th:action="'/' +${currentQuestion}" method="post"> <br>
+            <form th:action="'/result/' +${currentQuestion}" method="post">
+                <br>
                 <br> <label class="radio-inline" ><input type="radio" id="input1" name="action" th:value="true" /><label> Ja </label></label>
                 <label class="radio-inline"><input type="radio" name="action" th:value="false"/><label> Nej </label><br></label>
                 <p>
+                <h6>(Välj ett svarsalternativ för att kunna gå vidare)</h6>
                 <div class="d-grid gap-2 col-6 mx-auto"><input type="submit" class="tempBtn2 btn btn-primary mb-2 m-1" value="Nästa"></div>
                 </p>
             </form>
