--- a/src/main/resources/templates/result.html
+++ b/src/main/resources/templates/result.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="stylesheet" href="01.css">
+    <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
 </head>
-<body class="container overflow-hidden text-center">
+<body class="container overflow-auto text-center">
+
 <div class="header"><img src="/img/logo01.png" class="img-fluid" alt="Responsive image"></div>
 
 <h1>Du skulle passa som: </h1>
