description and länk

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -13,6 +13,11 @@
 <div class="text-bg p-3">
     <h5>bla bla efter gymnasiet bla bla bla välja bla bla anställning bla bla bla bla bla<br>  bla bla bla blabla bla bla bla eftergynasiell bla bla bla bla plugga bla bla bla </h5>
 </div>
+
+
+
+
+</div>
 <table>
     <a th:href="@{/start}">
         <input type="button" class="tempBtn2 btn btn-primary mb-2 m-1" name="Start" value="Starta quiz">
