--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -11,7 +11,8 @@
 <body class="container overflow-auto text-center">
 <div class="header"><img src="/img/logo01.png" class="img-fluid" alt="Responsive image"></div>
 <div class="text-bg p-3">
-    <h5>bla bla efter gymnasiet bla bla bla välja bla bla anställning bla bla bla bla bla<br>  bla bla bla blabla bla bla bla eftergynasiell bla bla bla bla plugga bla bla bla </h5>
+    <h5>Det kan vara svårt att hitta ett yrke som passar dina personliga egenskaper. Antalet valmöjligheter är många och det är inte alltid självklart vad man vill göra i sitt framtida yrkesliv. Yrkeskompassen är till för dig som behöver vägledning i dina val inför framtiden. Svara på vårat quiz och få förslag på olika yrken.
+    </h5>
 </div>
 
 
