--- a/src/main/resources/templates/result.html
+++ b/src/main/resources/templates/result.html
@@ -16,7 +16,7 @@
 <div th:each="professions : ${matchedList}">
     <h4 th:text="${professions.title} "></h4>
 
-    <h6 th:utext="${professions.DESCRIPTION}"></h6>
+    <h6 th:utext="${professions.DESCRIPTION}"></h6><br>
 </div>
 
 
@@ -26,7 +26,7 @@
 
 <h2>Egenskaper du fick poäng i:</h2>
 
-<div th:each="traits : ${session.traitsList}" th:if="${traits.points} > 0" th:text="${traits.trait} + ' (' + ${traits.points} + ' POÄNG)'"></div>
+<h6 th:each="traits : ${session.traitsList}" th:if="${traits.points} > 0" th:text="${traits.trait} + ' (' + ${traits.points} + ' POÄNG)'"></h6>
 
 </body>
 </html>
