--- a/src/main/resources/templates/Start.html
+++ b/src/main/resources/templates/Start.html
@@ -8,32 +8,32 @@
     <link rel="stylesheet" href="/CSS/style.css">
 </head>
 <body class="container overflow-auto text-center">
-<!--<div class="card text-bg-primary mb-3" style="max-width: 18rem;">    <div class="card-body">    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>  </div></div>-->
-<div class="header"><img src="/img/logo01.png" class="img-fluid" alt="Responsive image"></div>
+<div class="header"><img src="/img/logo02.png" class="img-fluid" alt="Responsive image"></div>
 <div class>
     <h5>
         <br>
-    <div class="card-header" th:text="'Fråga ' + ${currentQuestion} + ' av ' + ${questionSize}"></div>
+        <div class="card-header" th:text="'Fråga ' + ${currentQuestion} + ' av ' + ${questionSize}"></div>
         <table><br>
             <tr th:text="${session.question.question}"></tr>
             <form th:action="'/result/' +${currentQuestion}" method="post">
                 <br>
-                <br> <label class="radio-inline" ><input type="radio" id="input1" name="action" th:value="true" /><label> Ja </label></label>
+                <br> <label class="radio-inline"><input type="radio" id="input1" name="action" th:value="true"/><label>
+                Ja </label></label>
                 <label class="radio-inline"><input type="radio" name="action" th:value="false"/><label> Nej </label><br></label>
                 <p>
                 <h6>(Välj ett svarsalternativ för att kunna gå vidare)</h6>
-                <div class="d-grid gap-2 col-6 mx-auto"><input type="submit" class="tempBtn2 btn btn-primary mb-2 m-1" value="Nästa"></div>
+                <div class="d-grid gap-2 col-6 mx-auto"><input type="submit" class="tempBtn2 btn btn-primary mb-2 m-1"
+                                                               value="Nästa"></div>
                 <br>
                 </p>
             </form>
 
         </table>
-        <div th:text="${errorMessage}"></div>
+
     </h5>
 
 </div>
-<!--<form action="/" method="post"th:object=""><div th:each="question : ${questionList}"th:text="${question.question}"><div class="form-check">    <input class="form-check-input" type="radio" th:field="${question.answer}"name="flexRadioDefault" id="flexRadioDefault1">    <label class="form-check-label" for="flexRadioDefault1">        Ja
-    </label></div><div class="form-check">    <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2" checked>    <label class="form-check-label" for="flexRadioDefault2">        Nej
-    </label></div></div><input class="btn btn-primary" type="submit" value="Submit"></form><script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"        integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"        crossorigin="anonymous"></script>-->
+<!--</form><script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
+   integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"   crossorigin="anonymous"></script>-->
 </body>
 </html>
