--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,29 +1,31 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml" xmlns:max-width="http://www.w3.org/1999/xhtml"
-      xmlns:height="http://www.w3.org/1999/xhtml">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml"
+
+>
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+
     <link rel="stylesheet" href="/CSS/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
 
-   <style>
+    <style>
         h5 {
         width: 85%;
         margin: auto;
         }
+
     </style>
 </head>
 <body class="container overflow-auto text-center">
-<div class="header"><img src="/img/logo01.png" class="img-fluid" alt="Responsive image"></div>
+<div class="header"><img src="/img/logo02.png" class="img-fluid" alt="Responsive image"></div>
 <div class="text-bg p-3">
-    <h5 class="homeText">Det kan vara svårt att hitta ett yrke som passar dina personliga egenskaper. Antalet valmöjligheter är många och det är inte alltid självklart vad man vill göra i sitt framtida yrkesliv. Yrkeskompassen är till för dig som behöver vägledning i dina val inför framtiden. Svara på vårat quiz och få förslag på olika yrken.
+    <h5>Det kan vara svårt att hitta ett yrke som passar dina personliga egenskaper. Antalet valmöjligheter är många och
+        det är inte alltid självklart vad man vill göra i sitt framtida yrkesliv. Yrkeskompassen är till för dig som
+        behöver vägledning i dina val inför framtiden. Svara på vårat quiz och få förslag på olika yrken.
     </h5>
 </div>
-
-
-
 
 </div>
 <table>
@@ -31,6 +33,7 @@
         <input type="button" class="tempBtn2 btn btn-primary mb-2 m-1" name="Start" value="Starta quiz">
     </a>
 </table>
+
 <!--
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
