validation on radio buttons

--- a/src/main/resources/templates/Start.html
+++ b/src/main/resources/templates/Start.html
@@ -17,9 +17,12 @@
             <tr th:text="${session.question.question}"></tr>
             <form th:action="'/result/' +${currentQuestion}" method="post">
                 <br>
-                <br> <label class="radio-inline"><input type="radio" id="input1" name="action" th:value="true"/><label>
-                Ja </label></label>
-                <label class="radio-inline"><input type="radio" name="action" th:value="false"/><label> Nej </label><br></label>
+                <br>
+                <input type="radio" id="validationFormCheck1" name="action" th:value="true" required/>
+                <label class="radio-inline" for="validationFormCheck1">Ja</label>
+                <input type="radio" id="validationFormCheck2" name="action" th:value="false" required/>
+                <label class="radio-inline" for="validationFormCheck2">Nej</label>
+                <br>
                 <p>
                 <h6>(Välj ett svarsalternativ för att kunna gå vidare)</h6>
                 <div class="d-grid gap-2 col-6 mx-auto"><input type="submit" class="tempBtn2 btn btn-primary mb-2 m-1"
