--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -4,7 +4,8 @@
 >
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Yrkeskompassen</title>
+    <link rel="icon" href="/img/kompass.png">
 
     <link rel="stylesheet" href="/CSS/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -21,7 +22,7 @@
     </style>
 </head>
 <body class="container overflow-auto text-center">
-<div class="header"><img src="/img/logo02.png" class="img-fluid" alt="Responsive image"></div>
+<div class="header"><img src="/img/logo05.png" class="img-fluid" alt="Responsive image"></div>
 <div class="text-bg p-3">
     <h5>Det kan vara svårt att hitta ett yrke som passar dina personliga egenskaper. Antalet valmöjligheter är många och
         det är inte alltid självklart vad man vill göra i sitt framtida yrkesliv. Yrkeskompassen är till för dig som
@@ -31,15 +32,11 @@
 
 </div>
 <table>
-    <a th:href="@{/start}">
+    <a th:href="@{/question}">
         <input type="button" class="tempBtn2 btn btn-primary mb-2 m-1" name="Start" value="Starta quiz">
     </a>
 </table>
 
-<!--
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
-        crossorigin="anonymous"></script>
--->
+
 </body>
 </html>
