--- a/src/main/resources/templates/questionPage.html
+++ b/src/main/resources/templates/questionPage.html
@@ -2,13 +2,14 @@
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Yrkeskompassen</title>
+    <link rel="icon" href="/img/kompass.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
     <link rel="stylesheet" href="/CSS/style.css">
 </head>
 <body class="container overflow-auto text-center">
-<div class="header"><img src="/img/logo02.png" class="img-fluid" alt="Responsive image"></div>
+<div class="header"><img src="/img/logo05.png" class="img-fluid" alt="Responsive image"></div>
 <div class>
     <h5>
         <br>
@@ -35,6 +36,9 @@
                     </div>
 
                 </div>
+                <br>
+                <br>
+                <a class="tempBtn2 btn btn-light mb-2 m-1" th:href="'/'" th:if="${id}>1">Gör om testet</a>
 
             </form>
 
@@ -44,7 +48,6 @@
     </h5>
 
 </div>
-<!--</form><script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
-   integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"   crossorigin="anonymous"></script>-->
+
 </body>
 </html>
