Sorterat ut egenskaper

--- a/src/main/resources/templates/result.html
+++ b/src/main/resources/templates/result.html
@@ -33,7 +33,7 @@
 <div class="card text-bg-secondary p-3" style="max-width: 89%; margin: auto;">
     <div class="card-header">Dina starkaste egenskaper:</div>
     <div class="card-body">
-        <p class="card-text" th:each="traits : ${session.traitsList}" th:if="${traits.points}>1"
+        <p class="card-text" th:each="traits : ${matchedTraits}"
            th:text="${traits.trait} + ' (' + ${traits.points} + ' POÄNG)'"></p>
     </div>
 </div>
